--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puppeteer-cn",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Puppeteer lives in China",
   "main": "lib/index.js",
   "directories": {
@@ -33,7 +33,8 @@
   "files": [
     "lib",
     "package.json",
-    "README.md"
+    "README.md",
+    "chromium-download-error.png"
   ],
   "engines": {
     "node": ">=5.12.0"
